--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
+    "test": "mocha",
     "prod_win": "set NODE_ENV=production && node ./bin/www",
     "prod_nix": "NODE_ENV=production node ./bin/www"
   },
@@ -17,9 +18,12 @@
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
+    "mocha": "^7.2.0",
     "nodemon": "^2.0.4"
   }
 }
