--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "test": "mocha",
-    "prod_win": "set NODE_ENV=production && node ./bin/www",
-    "prod_nix": "NODE_ENV=production node ./bin/www"
+    "test": "mocha"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,7 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "^1.7.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "3.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
