--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,3 +9,8 @@ services:
       - NODE_ENV=production
     ports:
       - '8080:8080'
+    healthcheck:
+      test: curl --fail -s http://localhost:8080 || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 3
