--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    logging:
+      driver: "syslog"
     volumes:
     - .:/usr/node_app/app
     # this is workaround to prevent host node_modules from accidentally getting
