--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-prom-bundle": "^6.0.0",
     "http-errors": "^1.7.3",
     "morgan": "~1.9.1",
+    "prom-client": "^12.0.0",
     "pug": "3.0.0"
   },
   "devDependencies": {
